@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.18 2005/11/18 02:25:44 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.19 2005/11/29 18:44:39 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -44,6 +44,10 @@ class livecd_stage1_target(generic_stage_target):
 	def set_spec_prefix(self):
 	                self.settings["spec_prefix"]="livecd"
 	
+	def set_use(self):
+	    generic_stage_target.set_use(self)
+	    self.settings["/use"].append("livecd")
+
 	def set_packages(self):
 	    generic_stage_target.set_packages(self)
 	    if self.settings.has_key(self.settings["spec_prefix"]+"/packages"):
