@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.400 2005/11/29 15:24:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.401 2005/11/29 18:44:39 rocket Exp $
+
+  29 Nov 2005; Eric Edgar <rocket@gentoo.org>
+  modules/livecd_stage1_target.py:
+  Force use=livecd for livecd-stage1
 
   29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is version 2.0_pre20051129.
